    * Fixed issue with TagDialog that brought to messed up digits order in numerical
      fields (year, track, disk, score). (BR 277279)
    * Made possible to store empty TagDialog's numerical fields. (BR 278921)
    * Fixed issue with TagDialog's "Open Destination" button, now It opens
      correct directory instead of parent. (BR 279147)

Version 2.4.3
  BUGFIXES:
    * Fix KWallet auth requests on every track change. (BR 278177)
    * Display correct values for pretty times (playlist length) > 1 day.
    * Update playlist length correctly after removing track. (BR 273407)
    * Fix seek backward from dbus. (Thanks to Matthieu Bedouet) (BR 263287)
    * Prevent dialog querying last.fm settings being displayed on startup if none set.
    * Fix detection of smartphones in USB storage mode. (BR 277685)
    * Fix crashes on expanding a newly cloned dynamic playlist (BR 277750)
    * Don't block the UI while calculating the filename previews. (BR 233196)
    * Make M3U & PLS playlist files editable from Saved Playlists. (BR 245963)

Version 2.4.2
    * This version number was skipped.

VERSION 2.4.2-Beta 1
  FEATURES:
    * Made Amarok compile with the Clang LLVM frontend.
    * Enable drag and drop on collections to copy/move within Local Music and
      directly from the playlist. (BR 223400)
    * Added KNotify scripting interface. (BR 260750)
    * Make podcast episodes download filename configurable. Patch by
      Sandeep Raghuraman. (BR 155075)
    * Automatic scrolling in lyrics applet (Thanks to Jan Gerrit Marker)
    * Option to scrobble composer as artist to Last.fm (Thanks to Nicholas Wilson)
    * Option to hide the OSD if another window is taking the full screen

  CHANGES:
    * Again write back ratings only if option is selected.
    * Moved the queue-editor action to the main menu under playlist to save space.
      Queue editor now has a shortcut: Meta+U.
    * Removed the redo action from the playlist toolbar to make it less wide.